--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-monic",
-  "description": "Using Monic with Gulp",
-  "version": "1.0.0",
+  "description": "Using Monic with Gulp.",
+  "version": "1.0.1",
   "homepage": "https://github.com/kobezzza/gulp-monic",
   "author": {
     "name": "Kobezzza",
