--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "1.0.2",
   "homepage": "https://github.com/kobezzza/gulp-monic",
   "author": {
-    "name": "Kobezzza",
+    "name": "kobezzza",
     "email": "kobezzza@mail.ru",
-    "url": "https://github.com/kobezzza/"
+    "url": "https://github.com/kobezzza"
   },
   "repository": {
     "type": "git",
