--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "gulp-monic",
   "description": "Using Monic with Gulp.",
-  "version": "1.0.3",
-  "homepage": "https://github.com/kobezzza/gulp-monic",
+  "version": "2.0.0",
+  "homepage": "https://github.com/MonicBuilder/gulp-monic",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@mail.ru",
@@ -10,15 +10,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/kobezzza/gulp-monic.git"
+    "url": "git://github.com/MonicBuilder/gulp-monic.git"
   },
   "bugs": {
-    "url": "https://github.com/kobezzza/gulp-monic/issues"
+    "url": "https://github.com/MonicBuilder/gulp-monic/issues"
   },
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/kobezzza/gulp-monic/blob/master/LICENSE"
+      "url": "https://github.com/MonicBuilder/gulp-monic/blob/master/LICENSE"
     }
   ],
   "main": "index.js",
@@ -34,7 +34,10 @@
   ],
   "dependencies": {
     "gulp-util": "^3.0.1",
-    "monic": "^1.0.0",
+    "monic": "^2.0.0",
     "through2": "^0.6.3"
+  },
+  "devDependencies": {
+    "jscs": "^1.12.0"
   }
 }
