Added support for source maps

--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
   "dependencies": {
     "gulp-util": "^3.0.1",
     "monic": "^2.0.0",
-    "through2": "^0.6.3"
+    "through2": "^0.6.3",
+    "vinyl-sourcemaps-apply": "^0.1.4"
   },
   "devDependencies": {
     "jscs": "^1.12.0"
