--- a/package.json
+++ b/package.json
@@ -15,12 +15,7 @@
   "bugs": {
     "url": "https://github.com/MonicBuilder/gulp-monic/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/MonicBuilder/gulp-monic/blob/master/LICENSE"
-    }
-  ],
+  "license": "MIT",
   "main": "index.js",
   "engines": {
     "node": ">= 0.10"
