--- a/package.json
+++ b/package.json
@@ -34,11 +34,16 @@
   ],
   "dependencies": {
     "gulp-util": "^3.0.1",
-    "monic": "^2.0.0",
     "through2": "^2.0.0",
     "vinyl-sourcemaps-apply": "^0.1.4"
   },
+  "peerDependencies": {
+    "gulp": "*",
+    "monic": "^2.0.0"
+  },
   "devDependencies": {
-    "jscs": "^2.0.0"
+    "gulp": "^3.9.0",
+    "jscs": "^2.0.0",
+    "monic": "^2.0.0"
   }
 }
