--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "gulp-monic",
   "description": "Using Monic with Gulp.",
-  "version": "2.0.10",
   "homepage": "https://github.com/MonicBuilder/gulp-monic",
+  "main": "index.js",
+  "version": "2.0.10",
+  "license": "MIT",
   "author": {
     "name": "kobezzza",
     "email": "kobezzza@mail.ru",
@@ -15,13 +17,6 @@
   "bugs": {
     "url": "https://github.com/MonicBuilder/gulp-monic/issues"
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "https://github.com/MonicBuilder/gulp-monic/blob/master/LICENSE"
-    }
-  ],
-  "main": "index.js",
   "engines": {
     "node": ">= 0.10"
   },
@@ -37,13 +32,13 @@
     "through2": "^2.0.0",
     "vinyl-sourcemaps-apply": "^0.1.4"
   },
-  "peerDependencies": {
-    "gulp": "*",
-    "monic": "^2.0.0"
-  },
   "devDependencies": {
     "gulp": "^3.9.0",
     "jscs": "^2.0.0",
+    "monic": "^2.0.0"
+  },
+  "peerDependencies": {
+    "gulp": "*",
     "monic": "^2.0.0"
   }
 }
