--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "Using Monic with Gulp.",
   "homepage": "https://github.com/MonicBuilder/gulp-monic",
   "main": "index.js",
-  "version": "2.0.10",
+  "version": "2.0.11",
   "license": "MIT",
   "author": {
     "name": "kobezzza",
@@ -33,8 +33,8 @@
     "vinyl-sourcemaps-apply": "^0.2.0"
   },
   "devDependencies": {
+    "eslint": "^2.13.1",
     "gulp": "^3.9.0",
-    "jscs": "^3.0.0",
     "monic": "^2.0.0"
   },
   "peerDependencies": {
